--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,7 @@
 name: ChestTerminal
 version: 1.0
 author: mrCookieSlime
+api-version: 1.13
 website: http://TheBusyBiscuit.github.io/
 depend: [CS-CoreLib, Slimefun]
 
